# video-rebuilder

./: .gitignore
LibAvWrapper/inc/: Frame.hpp  Mat.hpp  Packet.hpp  VideoCodec.hpp  VideoReader.hpp  VideoWriter.hpp
LibAvWrapper/src/: Frame.cpp  Packet.cpp  VideoCodec.cpp  VideoReader.cpp  VideoWriter.cpp
MainProject/: CMakeLists.txt
MainProject/inc/: remuxerFunction.hpp  resultReader.hpp
MainProject/src/: main.cpp  remuxerFunction.cpp  resultReader.cpp
